--- a/README.rdoc
+++ b/README.rdoc
@@ -7,3 +7,12 @@
 === Очередь
 * Добавить к динамической реализации очереди операции size() и peek().
 * Добавить к реализации очереди на основе циклического массива автоматическое расширение массива и операцию compact(), сокращающую используемый массив до минимально возможной длины.
+
+=== Калькулятор
+* Реализовать простой калькулятор вида: два поля для ввода чисел, четыре кнопки для основных операций и поле для результата в которое записывается результат операции при нажатии одной из кнопок
+
+=== График функции
+* Дорисовать к графику функции оси и деления (дргуим цветом)
+
+=== Хэш-таблицы
+* Реализовать автоматическое расширение обоих реализаций хэш-таюблиц
